# Truco

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  detect_grid.py  fix_gresource.py  meson.build  meson_options.txt  process_spanish_deck.py  update_assets.py
.github/workflows/: flathub.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/argentino_20251220/: metadata.json  plan.md  spec.md
conductor/archive/mineiro_20251221/: metadata.json  plan.md  spec.md
conductor/archive/ui_consistency_20251221/: metadata.json  spec.md
conductor/tracks/argentino_20251220/: plan.md
conductor/tracks/mineiro_20251221/: plan.md
conductor/tracks/paulista_20251221/: metadata.json  plan.md  spec.md
conductor/tracks/ui_consistency_20251221/: plan.md
data/: io.github.tobagin.Truco.desktop.in  io.github.tobagin.Truco.gresource.xml  io.github.tobagin.Truco.gresource.xml.in  io.github.tobagin.Truco.gschema.xml.in  io.github.tobagin.Truco.metainfo.xml.in  meson.build  style.css
data/screenshots/: README.md
data/ui/: avatar_selector.blp  match_end_dialog.blp  new_game_dialog.blp  onboarding_dialog.blp  online_dialog.blp  preferences_dialog.blp  shortcuts.blp  window.blp
help/: meson.build  truco-help.pot
help/C/: argentino.page  index.page  mineiro.page  paulista.page  uruguayo.page  venezolano.page
help/es/: es.po
help/pt_BR/: pt_BR.po
legacy/: io.github.tobagin.Truco.desktop.in  io.github.tobagin.Truco.metainfo.xml.in  meson.build
legacy/src/: Application.vala  Config.vala.in  Main.vala  meson.build
legacy/src/dialogs/: About.vala
legacy/ui/: shortcuts.blp  window.blp
openspec/changes/archive/2025-10-11-initial-vala-gtk-setup/: proposal.md  tasks.md
openspec/changes/archive/2025-10-11-initial-vala-gtk-setup/specs/build-system/: spec.md
openspec/changes/archive/2025-10-11-initial-vala-gtk-setup/specs/packaging/: spec.md
openspec/changes/archive/2025-10-11-initial-vala-gtk-setup/specs/project-structure/: spec.md
openspec/changes/archive/2025-10-11-initial-vala-gtk-setup/specs/ui-framework/: spec.md
openspec/changes/fix-app-launch-and-ui/: design.md  proposal.md  tasks.md
openspec/changes/fix-app-launch-and-ui/specs/build-system/: spec.md
openspec/changes/fix-app-launch-and-ui/specs/project-structure/: spec.md
openspec/changes/fix-app-launch-and-ui/specs/ui-framework/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/packaging/: spec.md
openspec/specs/project-structure/: spec.md
openspec/specs/ui-framework/: spec.md
packaging/: io.github.tobagin.Truco.Devel.yml  io.github.tobagin.Truco.desktop  io.github.tobagin.Truco.gresource.xml  io.github.tobagin.Truco.metainfo.xml  io.github.tobagin.Truco.yml
po/: LINGUAS  POTFILES  ca.po  es.po  fr.po  io.github.tobagin.Truco.pot  it.po  meson.build  pt.po  pt_BR.po  pt_PT.po
scripts/: build.sh  publish-server.sh
server/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  server.js  smoke-test.js  supabase-schema.sql
src/: Application.vala  Config.vala.in  DialogFactory.vala  Game.vala  Main.vala  RulesEngine.vala  ScoreManager.vala  SoundManager.vala  TutorialManager.vala  Window.vala  meson.build  test_ai_integration.vala  test_mineiro_rules.vala  test_rules_engine.vala  test_score_manager.vala  test_ui_consistency.vala
src/dialogs/: About.vala  AvatarSelector.vala  MatchEndDialog.vala  NewGameDialog.vala  OnboardingDialog.vala  OnlineDialog.vala  PreferencesDialog.vala
src/services/network/: MultiplayerGameController.vala  NetworkClient.vala  NetworkMessage.vala  NetworkSession.vala
tools/: generate_french_decks.py  generate_spanish_deck.py
